[tool.poetry]
name = "fastapi-responseschema"
version = "1.3.0"
description = "Generic and common response schemas for FastAPI"
authors = ["Emanuele Addis <ustarjem.acwazz@gmail.com>", "Florin Cotovanu <flc995@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acwazz/fastapi-responseschema"
homepage = "https://acwazz.github.io/fastapi-responseschema/"


[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.66.0"
fastapi-pagination = {version = "^0", optional = true}

[tool.poetry.dev-dependencies]
pydoc-markdown = {extras = ["docs"], version = "^4.6.3"}
novella = "^0.2.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.2"
requests = "^2.28.1"
uvicorn = "^0.19.0"
ipython = "^8.5.0"
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.3"
pyre-check = "^0.9.16"
black = "^22.10.0"

[tool.poetry.extras]
pagination = ["fastapi-pagination"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:htmlcov"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [".*", "*/site-packages/*, */__init__.py"]
source = ['fastapi_responseschema']

[tool.coverage.report]
fail_under = 90

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "fastapi_responseschema" ]

[tool.pydoc-markdown.renderer]
type = "mkdocs"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | stubs
  | \.pyre
  | \.github
  | \.pyre_configuration
  | \.gitignore
  | \.coverage
)/
'''

