[tool.poetry]
name = "fastapi-responseschema"
version = "2.0.0"
description = "Generic and common response schemas for FastAPI"
authors = ["Emanuele Addis <ustarjem.acwazz@gmail.com>", "Florin Cotovanu <flc995@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acwazz/fastapi-responseschema"
homepage = "https://acwazz.github.io/fastapi-responseschema/"


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
fastapi-pagination = {version = "^0", optional = true}

[tool.poetry.extras]
pagination = ["fastapi-pagination"]

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
pydoc-markdown = "^4.6.4"
novella = "^0.2.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.2"
requests = "^2.28.1"
uvicorn = "^0.19.0"
ipython = "^8.6.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
black = "^22.10.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:htmlcov"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [".*", "*/site-packages/*, */__init__.py"]
source = ['fastapi_responseschema']

[tool.coverage.report]
fail_under = 90

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "fastapi_responseschema" ]

[tool.pydoc-markdown.renderer]
type = "mkdocs"

[tool.mypy]
exclude = "tests"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | stubs
  | \.pyre
  | \.github
  | \.pyre_configuration
  | \.gitignore
  | \.coverage
)/
'''

